# ruma-lean

./: .editorconfig  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Cargo.toml  Makefile  README.md  RumaLean.lean  lake-manifest.json  lakefile.toml
.cargo/: cargo-wrapper.sh  config.toml
.github/workflows/: ci.yml  e2e.yml  lean.yml  rust.yml
RumaLean/: Arithmetization.lean  AuthRules.lean  Bitwise.lean  Commitment.lean  CustomAIR.lean  DirectedAcyclicGraph.lean  Field.lean  GraphComparison.lean  Hypercube.lean  Kahn.lean  MergeBase.lean  Merkle.lean  StarGraph.lean  StarGraphEmbedding.lean  StateRes.lean  TopologicalReduction.lean  todo.md
RumaLean/unstable/: GraphComparison.lean  TopologicalReduction.lean
demo/: README.md  index.html
docs/: CASE_STUDY_FORESTPUNK.md  topological-reducer-speedup.md
res/: benchmark_1k.json
res/expected/: oracle_52k_room.json  oracle_nheko_room.json
scripts/: compare_homeservers.py  compare_outputs.sh  e2e_shuffled.py  e2e_test.py  export_from_db.py  export_room_dag.py  extract_oracle_state.py  fetch_matrix_state.py  gen_large_room.py  gen_snapshots.py  generate_benchmark_1k.py  setup_ruma_cli.sh  visualize_benchmarks.wls
src/: auth.rs  ctopology.rs  lib.rs  main.rs  trace_compiler.rs
src/guest/: Cargo.toml
src/guest-unoptimized/: Cargo.toml  main.rs
src/host/: Cargo.toml  main.rs  verify.rs
src/wasm-client/src/: lib.rs
tests/: ruma_upstream.rs  snapshots.rs
