[package]
name = "ruma-lean"
version = "0.1.1"
edition = "2021"
authors = ["Shane Jaroch <chown_tee@proton.me>"]
description = "Formally verified, dependency-free Matrix State Resolution v2 logic."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gamesguru/ruma-lean"

[[bin]]
name = "ruma-lean"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["std"]
std = ["alloc", "serde_json/std", "ed25519-consensus", "serde/std"]
alloc = []
zkvm = []
cli = ["std", "dep:clap", "dep:anyhow", "dep:ureq"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "4.4", optional = true, features = ["derive", "env"] }
ed25519-consensus = { version = "2.1", optional = true, default-features = false }
hashbrown = { version = "0.14", default-features = false, features = ["ahash", "inline-more"] }
p3-baby-bear = "0.2"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ureq = { version = "2.9", optional = true, features = ["json"] }

[dev-dependencies]
