[package]
name = "zk-matrix-join-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-matrix-join-host"
path = "main.rs"

[[bin]]
name = "zk-matrix-join-verify"
path = "verify.rs"

[[bin]]
name = "zk-matrix-join-setup"
path = "setup_circuit.rs"

[dependencies]
sp1-sdk = { version = "6.0.2", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
ruma-events = "0.32.1"
ruma-common = { version = "0.17.1", features = ["canonical-json"] }
hex = "0.4"
ciborium = "0.2.2"
sp1-verifier = "6.0.2"
bincode = "1.3"
ruma-lean = { path = "../../ruma-lean" }
rayon = "1.8"
ed25519-consensus = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"

[build-dependencies]
sp1-build = "6.0.2"
